--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
     "react-contentful": "^2.0.31",
     "react-dom": "^17.0.2",
     "react-scripts": "4.0.3",
+    "set-default-browser": "^1.1.2",
     "styled-components": "^5.3.1",
     "web-vitals": "^1.1.2"
   },
