--- a/package.json
+++ b/package.json
@@ -6,6 +6,7 @@
     "@testing-library/jest-dom": "^5.14.1",
     "@testing-library/react": "^11.2.7",
     "@testing-library/user-event": "^12.8.3",
+    "formik": "^2.2.9",
     "gsap": "^3.8.0",
     "react": "^17.0.2",
     "react-contentful": "^2.0.31",
@@ -13,7 +14,8 @@
     "react-scripts": "4.0.3",
     "set-default-browser": "^1.1.2",
     "styled-components": "^5.3.1",
-    "web-vitals": "^1.1.2"
+    "web-vitals": "^1.1.2",
+    "yup": "^0.32.10"
   },
   "scripts": {
     "start": "react-scripts start",
