--- a/package.json
+++ b/package.json
@@ -42,5 +42,9 @@
       "last 1 firefox version",
       "last 1 safari version"
     ]
+  },
+  "devDependencies": {
+    "@svgr/webpack": "^5.5.0",
+    "file-loader": "^6.1.1"
   }
 }
