--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
     "react-dom": "^17.0.2",
     "react-intersection-observer": "^8.32.1",
     "react-scripts": "4.0.3",
+    "react-scroll": "^1.8.4",
     "react-use": "^17.3.1",
     "set-default-browser": "^1.1.2",
     "styled-components": "^5.3.1",
