--- a/package.json
+++ b/package.json
@@ -1,8 +1,10 @@
 {
   "name": "portfolio",
+  "homepage": "https://szadziu.github.io/portfolio",
   "version": "0.1.0",
   "private": true,
   "dependencies": {
+    "@emailjs/browser": "^3.4.0",
     "@fortawesome/fontawesome-svg-core": "^1.2.36",
     "@fortawesome/free-solid-svg-icons": "^5.15.4",
     "@fortawesome/react-fontawesome": "^0.1.16",
@@ -10,6 +12,7 @@
     "@testing-library/react": "^11.2.7",
     "@testing-library/user-event": "^12.8.3",
     "formik": "^2.2.9",
+    "gh-pages": "^3.2.3",
     "github-profile-widget": "^1.3.0",
     "gsap": "^3.9.1",
     "react": "^17.0.2",
@@ -25,6 +28,8 @@
     "yup": "^0.32.10"
   },
   "scripts": {
+    "predeploy": "npm run build",
+    "deploy": "gh-pages -d build",
     "start": "react-scripts start",
     "build": "react-scripts build",
     "test": "react-scripts test",
