--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
     "@testing-library/react": "^11.2.7",
     "@testing-library/user-event": "^12.8.3",
     "formik": "^2.2.9",
+    "framer-motion": "^4.1.17",
     "gh-pages": "^3.2.3",
     "github-profile-widget": "^1.3.0",
     "gsap": "^3.9.1",
