--- a/package.json
+++ b/package.json
@@ -20,6 +20,7 @@
     "react-contentful": "^2.0.31",
     "react-dom": "^17.0.2",
     "react-intersection-observer": "^8.32.1",
+    "react-responsive": "^9.0.2",
     "react-scripts": "4.0.3",
     "react-scroll": "^1.8.4",
     "react-use": "^17.3.1",
